tests/baselines/reference/generatorTypeCheck13.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck13.ts(3,5): error TS2322: Type '""' is not assignable to type 'number | void'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck13.ts (1 errors) ====
    function* g(): IterableIterator<number> {
        yield 0;
        return "";
        ~~~~~~~~~~
!!! error TS2322: Type '""' is not assignable to type 'number | void'.
    }